parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL

Grammar

Rule 0     S' -> VDECLS
Rule 1     PROG -> FUNCS
Rule 2     PROG -> EXTERNS FUNCS
Rule 3     EXTERNS -> EXTERNSTS
Rule 4     EXTERNS -> EXTERNS EXTERNSTS
Rule 5     FUNCS -> FUNC
Rule 6     FUNCS -> FUNCS FUNC
Rule 7     EXTERNSTS -> EXTERN TYPE ID LPAREN RPAREN SEMICOLON
Rule 8     EXTERNSTS -> EXTERN TYPE ID LPAREN TDECLS RPAREN SEMICOLON
Rule 9     FUNC -> DEF TYPE ID LPAREN RPAREN BLK
Rule 10    FUNC -> DEF TYPE ID LPAREN VDECLS RPAREN BLK
Rule 11    BLK -> LBRACE RBRACE
Rule 12    BLK -> LBRACE STMTS RBRACE
Rule 13    STMTS -> STMT
Rule 14    STMTS -> STMTS STMT
Rule 15    STMT -> BLK
Rule 16    STMT -> RETURN SEMICOLON
Rule 17    STMT -> RETURN EXP SEMICOLON
Rule 18    STMT -> VDECL EQUAL EXP SEMICOLON
Rule 19    STMT -> EXP SEMICOLON
Rule 20    STMT -> WHILE LPAREN EXP RPAREN STMT
Rule 21    STMT -> IF LPAREN EXP RPAREN STMT
Rule 22    STMT -> IF LPAREN EXP RPAREN STMT ELSE STMT
Rule 23    STMT -> PRINT EXP SEMICOLON
Rule 24    STMT -> PRINT SLIT SEMICOLON
Rule 25    EXPS -> EXP
Rule 26    EXPS -> EXPS COMMA EXP
Rule 27    EXP -> EXPPAREN
Rule 28    EXP -> BINOP
Rule 29    EXP -> UOP
Rule 30    EXP -> LIT
Rule 31    EXP -> VARID
Rule 32    EXP -> EXPGLOBID
Rule 33    EXPPAREN -> LPAREN EXP RPAREN
Rule 34    EXPGLOBID -> GLOBID EXPWRAPPER
Rule 35    EXPWRAPPER -> LPAREN RPAREN
Rule 36    EXPWRAPPER -> LPAREN EXPS RPAREN
Rule 37    ASSIGN -> VARID EQUAL EXP
Rule 38    TYPECAST -> LBRACKET TYPE RBRACKET EXP
Rule 39    BINOP -> ARITHOPS
Rule 40    BINOP -> LOGICOPS
Rule 41    BINOP -> ASSIGN
Rule 42    BINOP -> TYPECAST
Rule 43    ARITHOPS -> EXP TIMES EXP
Rule 44    ARITHOPS -> EXP DIVIDE EXP
Rule 45    ARITHOPS -> EXP PLUS EXP
Rule 46    ARITHOPS -> EXP MINUS EXP
Rule 47    LOGICOPS -> EXP EQUALITY EXP
Rule 48    LOGICOPS -> EXP LESS EXP
Rule 49    LOGICOPS -> EXP GREATER EXP
Rule 50    LOGICOPS -> EXP AND EXP
Rule 51    LOGICOPS -> EXP OR EXP
Rule 52    UOP -> NOT EXP
Rule 53    UOP -> MINUS EXP
Rule 54    LIT -> TRUE
Rule 55    LIT -> FALSE
Rule 56    LIT -> NUMBER
Rule 57    TDECLS -> TYPE
Rule 58    TDECLS -> TDECLS COMMA TYPE
Rule 59    VDECLS -> VDECLS COMMA VDECL
Rule 60    VDECLS -> VDECL
Rule 61    VDECL -> TYPE VARID
Rule 62    VARID -> DOLLAR ID
Rule 63    TYPE -> INT
Rule 64    TYPE -> FLOAT
Rule 65    TYPE -> CINT
Rule 66    TYPE -> VOID
Rule 67    TYPE -> REF TYPE
Rule 68    TYPE -> NOALIAS REF TYPE
Rule 69    GLOBID -> ID

Terminals, with rules where they appear

AND                  : 50
BOOL                 : 
CINT                 : 65
COMMA                : 26 58 59
DEF                  : 9 10
DIVIDE               : 44
DOLLAR               : 62
ELSE                 : 22
EQUAL                : 18 37
EQUALITY             : 47
EXTERN               : 7 8
FALSE                : 55
FLOAT                : 64
GREATER              : 49
ID                   : 7 8 9 10 62 69
IF                   : 21 22
INT                  : 63
LBRACE               : 11 12
LBRACKET             : 38
LESS                 : 48
LPAREN               : 7 8 9 10 20 21 22 33 35 36
MINUS                : 46 53
NOALIAS              : 68
NOT                  : 52
NUMBER               : 56
OR                   : 51
PLUS                 : 45
PRINT                : 23 24
RBRACE               : 11 12
RBRACKET             : 38
REF                  : 67 68
RETURN               : 16 17
RPAREN               : 7 8 9 10 20 21 22 33 35 36
SEMICOLON            : 7 8 16 17 18 19 23 24
SLIT                 : 24
TIMES                : 43
TRUE                 : 54
VOID                 : 66
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

ARITHOPS             : 39
ASSIGN               : 41
BINOP                : 28
BLK                  : 9 10 15
EXP                  : 17 18 19 20 21 22 23 25 26 33 37 38 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53
EXPGLOBID            : 32
EXPPAREN             : 27
EXPS                 : 26 36
EXPWRAPPER           : 34
EXTERNS              : 2 4
EXTERNSTS            : 3 4
FUNC                 : 5 6
FUNCS                : 1 2 6
GLOBID               : 34
LIT                  : 30
LOGICOPS             : 40
PROG                 : 
STMT                 : 13 14 20 21 22 22
STMTS                : 12 14
TDECLS               : 8 58
TYPE                 : 7 8 9 10 38 57 58 61 67 68
TYPECAST             : 42
UOP                  : 29
VARID                : 31 37 61
VDECL                : 18 59 60
VDECLS               : 10 59 0

Parsing method: LALR

state 0

    (0) S' -> . VDECLS
    (59) VDECLS -> . VDECLS COMMA VDECL
    (60) VDECLS -> . VDECL
    (61) VDECL -> . TYPE VARID
    (63) TYPE -> . INT
    (64) TYPE -> . FLOAT
    (65) TYPE -> . CINT
    (66) TYPE -> . VOID
    (67) TYPE -> . REF TYPE
    (68) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    CINT            shift and go to state 6
    VOID            shift and go to state 7
    REF             shift and go to state 8
    NOALIAS         shift and go to state 9

    VDECLS                         shift and go to state 1
    VDECL                          shift and go to state 2
    TYPE                           shift and go to state 3

state 1

    (0) S' -> VDECLS .
    (59) VDECLS -> VDECLS . COMMA VDECL

    COMMA           shift and go to state 10


state 2

    (60) VDECLS -> VDECL .

    COMMA           reduce using rule 60 (VDECLS -> VDECL .)
    $end            reduce using rule 60 (VDECLS -> VDECL .)


state 3

    (61) VDECL -> TYPE . VARID
    (62) VARID -> . DOLLAR ID

    DOLLAR          shift and go to state 12

    VARID                          shift and go to state 11

state 4

    (63) TYPE -> INT .

    DOLLAR          reduce using rule 63 (TYPE -> INT .)


state 5

    (64) TYPE -> FLOAT .

    DOLLAR          reduce using rule 64 (TYPE -> FLOAT .)


state 6

    (65) TYPE -> CINT .

    DOLLAR          reduce using rule 65 (TYPE -> CINT .)


state 7

    (66) TYPE -> VOID .

    DOLLAR          reduce using rule 66 (TYPE -> VOID .)


state 8

    (67) TYPE -> REF . TYPE
    (63) TYPE -> . INT
    (64) TYPE -> . FLOAT
    (65) TYPE -> . CINT
    (66) TYPE -> . VOID
    (67) TYPE -> . REF TYPE
    (68) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    CINT            shift and go to state 6
    VOID            shift and go to state 7
    REF             shift and go to state 8
    NOALIAS         shift and go to state 9

    TYPE                           shift and go to state 13

state 9

    (68) TYPE -> NOALIAS . REF TYPE

    REF             shift and go to state 14


state 10

    (59) VDECLS -> VDECLS COMMA . VDECL
    (61) VDECL -> . TYPE VARID
    (63) TYPE -> . INT
    (64) TYPE -> . FLOAT
    (65) TYPE -> . CINT
    (66) TYPE -> . VOID
    (67) TYPE -> . REF TYPE
    (68) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    CINT            shift and go to state 6
    VOID            shift and go to state 7
    REF             shift and go to state 8
    NOALIAS         shift and go to state 9

    VDECL                          shift and go to state 15
    TYPE                           shift and go to state 3

state 11

    (61) VDECL -> TYPE VARID .

    COMMA           reduce using rule 61 (VDECL -> TYPE VARID .)
    $end            reduce using rule 61 (VDECL -> TYPE VARID .)


state 12

    (62) VARID -> DOLLAR . ID

    ID              shift and go to state 16


state 13

    (67) TYPE -> REF TYPE .

    DOLLAR          reduce using rule 67 (TYPE -> REF TYPE .)


state 14

    (68) TYPE -> NOALIAS REF . TYPE
    (63) TYPE -> . INT
    (64) TYPE -> . FLOAT
    (65) TYPE -> . CINT
    (66) TYPE -> . VOID
    (67) TYPE -> . REF TYPE
    (68) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    CINT            shift and go to state 6
    VOID            shift and go to state 7
    REF             shift and go to state 8
    NOALIAS         shift and go to state 9

    TYPE                           shift and go to state 17

state 15

    (59) VDECLS -> VDECLS COMMA VDECL .

    COMMA           reduce using rule 59 (VDECLS -> VDECLS COMMA VDECL .)
    $end            reduce using rule 59 (VDECLS -> VDECLS COMMA VDECL .)


state 16

    (62) VARID -> DOLLAR ID .

    COMMA           reduce using rule 62 (VARID -> DOLLAR ID .)
    $end            reduce using rule 62 (VARID -> DOLLAR ID .)


state 17

    (68) TYPE -> NOALIAS REF TYPE .

    DOLLAR          reduce using rule 68 (TYPE -> NOALIAS REF TYPE .)

